<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context=".Violations">


    <LinearLayout
        android:id="@+id/filter_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">


        <TextView
            android:id="@+id/filters_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filters"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup
            android:id="@+id/filter_radio_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/filter_all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/all"
                android:onClick="radioButtonCheck"/>

            <RadioButton
                android:id="@+id/filter_week"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/last_week"
                android:onClick="radioButtonCheck"/>

            <RadioButton
                android:id="@+id/filter_custom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_the_range"
                android:onClick="radioButtonCheck"/>

        </RadioGroup>

        <TableRow
            android:id="@+id/date_from_table_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start">

            <Button
                android:id="@+id/date_from_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/from" />

            <TextView
                android:id="@+id/date_from_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/datefrom"
                android:textSize="18sp" />

        </TableRow>

        <TableRow
            android:id="@+id/date_to_table_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:enabled="false"
            android:gravity="start">

            <Button
                android:id="@+id/date_to_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/to" />

            <TextView
                android:id="@+id/date_to_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/dateto"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/action_buttons_table_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <Button
                android:id="@+id/filter_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reset" />

            <Button
                android:id="@+id/filter_search_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/search" />
        </TableRow>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/violation_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/filter_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="36dp"
            android:backgroundTint="#14C5DC"
            android:clickable="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@android:drawable/ic_menu_sort_by_size" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>