<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/violation_list_parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
        <TextView
            android:id="@+id/violation_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:gravity="start|center"

            android:singleLine="true"
            android:text="@string/timestamp"
            app:layout_constraintBaseline_toBaselineOf="@+id/separator"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="8dp"
            android:gravity="start|center"
            android:singleLine="true"
            android:text="@string/a" />

        <TextView
            android:id="@+id/violation_speed"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:layout_marginStart="7dp"
            android:gravity="end|center"
            android:singleLine="true"
            android:text="0"
            android:textColor="#EC0B0B"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/violation_speed_metric"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:gravity="left|center"
        android:singleLine="true"
        android:text="@string/km_h"
        android:textColor="#EC0B0B"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|right">

        <Button
            android:id="@+id/violation_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/info" />

    </LinearLayout>


</LinearLayout>
